k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goal-tracker-service
  labels:
    app: goal-tracker
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: goal-tracker
