k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goal-tracker-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: goal-tracker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goal-tracker-service
                port:
                  number: 80
  tls:
    - hosts:
        - goal-tracker.local
      secretName: goal-tracker-tls
